Fix map overflow

--- a/src/App.css
+++ b/src/App.css
@@ -183,7 +183,7 @@ button:active {
 
 #mapview {
   float: left;
-  height: 89vh;
+  height: 100%;
 }
 
 #map {
